--- a/core/templates/core/email/contact_form.html
+++ b/core/templates/core/email/contact_form.html
@@ -1,4 +1,4 @@
-<h2>New Contact Request from heidymakescakes.com</h2>
+<h2>New Contact Request from {{company_website}}</h2>
 <p><b>name: </b> {{name}}</p>
 <p><b>phone number: </b> {{phone_number}}</p>
 <p><b>email: </b> {{email}}</p>
