--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,18 +5,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>{% block title %}{% endblock title %} | HMC</title>
-        <link rel="stylesheet" href="{% static '/css/main3.css' %}" />
-        <script src="{% static '/js/main.js' %}" defer></script>
+        <link rel="stylesheet" href="{% static '/css/main.css' %}" />
+        <script src="{% static '/js/main.js' %}" type="module"></script>
     </head>
     <body class="grid-body">
-        <div class="grid-body-item grid-body-child-1">
             {% include 'core/navbar.html' %}
-        </div>
-        <main class="grid-body-item grid-body-child-2">
+        <main>
             {% block content %}{% endblock content%}
         </main>
-        <div class="grid-body-item grid-body-child-3">
             {% include 'core/footer.html' %}
-        </div>
     </body>
 </html>
