--- a/core/templates/core/footer.html
+++ b/core/templates/core/footer.html
@@ -1,4 +1,5 @@
-<footer class="grid-footer">
+{% load static %}
+<footer>
     <p class="p-footer">
         Explore our cozy home bakery, where we craft delightful treats with
         premium ingredients and genuine care. Indulge in pastries, cakes,
@@ -7,11 +8,11 @@
         our meticulous baking approach.
     </p>
     <ul class="ul-footer">
-        <li><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="{% url "core:home" %}">Home</a></li>
+        <li><a href="{% url "core:about" %}">About</a></li>
         <li>
             <a href="https://www.instagram.com/heicakesusa/">Gallery</a>
         </li>
-        <li><a class="order-cta" href="#">Order Now</a></li>
+        <li><a class="order-cta" href="{% url "core:contact" %}">Order Now</a></li>
     </ul>
 </footer>
