--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,8 +1,24 @@
-{% extends 'core/base.html' %} {% block title %}Welcome{% endblock title %}
-{%block content %}
-<div class="grid-container">
-    <div class="grid-item child-1">{% include "core/hero.html" %}</div>
-    <div class="grid-item child-2">{% include "core/about.html" %}</div>
-    <div class="grid-item child-3">{% include "core/contact.html" %}</div>
-</div>
+{% extends "core/base.html" %}
+{% load static %}
+{% block title %}Welcome{% endblock title %}
+{% block content %}
+<section class="hero-section">
+    <div class="hero-left-col">
+        <div class="title">
+            <h1 class="header">Your Dream Wedding, Our Masterpiece</h1>
+            <h2 class="subheader">Imprint Your Love Story with Every Slice</h2>
+        </div>
+        <div class="hero-cta">
+            <a href="{% url "core:contact" %}">Order Now</a>
+            <a href="https://www.instagram.com/heicakesusa/">Instagram</a>
+        </div>
+    </div>
+    <div class="hero-right-col">
+        <img
+            src="{% static '/img/couple-cutting-cake.jpg' %}"
+            alt="couple cutting their wedding cake."
+            class="hero-img"
+        />
+    </div>
+</section>
 {% endblock content %}
