--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -1,27 +1,27 @@
 {% load static %}
 <div class="navbar">
-    <div class="grid-navbar container">
-        <a href="/" class="grid-navbar-item grid-navbar-child-1 logo"
-            >Hei<span>Cakes!</span>
+        <a href="/" class="logo"
+            >Hei<span>Cakes</span>
         </a>
         <img
+            class="menu-open"
             role="navigation"
             aria-label="Main Navigation Menu"
             id="mobile-cta"
             class="mobile-menu"
-            src="{% static '/images/menu-open.svg' %}"
+            src="{% static '/img/menu-open.svg' %}"
             alt="Open navbar menu"
-            width="16"
-            height="16"
+            width="24"
+            height="24"
         />
         <nav class="grid-navbar-item grid-navbar-child-2">
             <img
                 id="mobile-exit"
                 class="mobile-menu"
-                src="{% static '/images/menu-close.svg' %}"
+                src="{% static '/img/menu-close.svg' %}"
                 alt="Close navbar menu"
-                width="16"
-                height="16"
+                width="24"
+                height="24"
             />
             <ul class="grid-nav">
                 <li class="grid-nav-item grid-nav-child-1">
@@ -40,5 +40,4 @@
                 </li>
             </ul>
         </nav>
-    </div>
 </div>
