--- a/core/templates/core/contact.html
+++ b/core/templates/core/contact.html
@@ -1,15 +1,18 @@
-{% extends "core/base.html" %}
+{% extends 'core/base.html' %}
 {% load static %}
 {% block content %}
-<section class="contact-section">
-    <form class="contact-form" method="POST" contact-form>
-        <h1>Contact Form</h1>
-        {% csrf_token %} {{form.as_p}}
-        <button type="submit" submit-button>Submit</button>
-    </form>
-    <dialog data-modal backdrop="static">
-        <p id="modal-text">Your form has been submitted. Thank you.</p>
-        <a href="{% url "core:home" %}">Home</a>
-    </dialog>
-</section>
+    <section class="contact-section">
+        {% if messages %}
+            <dialog data-modal backdrop="static" id="modal">
+                <p id="modal-text">Your form has been submitted. Thank you.</p>
+                <a href="{% url 'core:home' %}">Home</a>
+            </dialog>
+        {% endif %}
+            <form class="contact-form" method="POST" contact-form>
+                <h1>Contact Form</h1>
+                {% csrf_token %} {{form.as_p}}
+                <button type="submit" submit-button id="submit">Submit</button>
+            </form>
+            <script src="{% static '/js/contact.js' %}" defer></script>
+    </section>
 {% endblock content %}
