--- a/hmc/core/templates/core/base.html
+++ b/hmc/core/templates/core/base.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>{% block title %}{% endblock title %} | HMC</title>
         <link rel="stylesheet" href="{% static 'css/main.css' %}" />
-        <script src="{% static '/js/main.js' %}" defer></script>
+        <script src="{% static 'js/main.js' %}" defer></script>
     </head>
     <body class="grid-body">
             {% include 'core/navbar.html' %}
