--- a/hmc/core/templates/core/base.html
+++ b/hmc/core/templates/core/base.html
@@ -8,11 +8,17 @@
         <link rel="stylesheet" href="{% static 'css/main.css' %}" />
         <script src="{% static 'js/main.js' %}" defer></script>
     </head>
-    <body class="grid-body">
-            {% include 'core/navbar.html' %}
+    <body>
+        {% include 'core/navbar.html' %}
         <main>
-            {% block content %}{% endblock content%}
+            {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                <li class="{{ message.tags }}">{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %} {% block content %}{% endblock content%}
         </main>
-            {% include 'core/footer.html' %}
+        {% include 'core/footer.html' %}
     </body>
 </html>
