--- a/hmc/core/templates/core/home.html
+++ b/hmc/core/templates/core/home.html
@@ -3,22 +3,34 @@
 {% block title %}Welcome{% endblock title %}
 {% block content %}
 <section class="hero-section">
-    <div class="hero-left-col">
-        <div class="title">
-            <h1 class="header">Your Dream Wedding, Our Masterpiece</h1>
-            <h2 class="subheader">Imprint Your Love Story with Every Slice</h2>
+    <div class="container">
+        <div class="hero-left-col">
+            <p class="subhead">Your Dream Wedding, Our Masterpiece</p>
+            <h1 class="header">Imprint Your Love Story with Every Slice</h1>
+            <div class="hero-cta">
+                <a class="primary-cta" href="{% url 'core:contact' %}">Order Now</a>
+                <a class="portfolio-link" href="https://{{ portfolio_link }}">Gallery</a>
+            </div>
         </div>
-        <div class="hero-cta">
-            <a href="{% url "core:contact" %}">Order Now</a>
-            <a href="https://www.instagram.com/heicakesusa/">Instagram</a>
-        </div>
-    </div>
-    <div class="hero-right-col">
+        
         <img
-            src="{% static '/img/couple-cutting-cake.jpg' %}"
-            alt="couple cutting their wedding cake."
-            class="hero-img"
+        src="{% static '/img/couple-cutting-cake.jpg' %}"
+        alt="couple cutting their wedding cake."
+        class="hero-img"
         />
+    </div>
+</section>
+<section>
+    <div class="features-section">
+        <div class="container">
+            <ul class="features-list">
+                <li>Custom Designs</li>
+                <li>Attention to Detail</li>
+                <li>Premium Ingredients</li>
+                <li>Wedding Cake Expertise</li>
+                <li>Personalized Consultation</li>
+            </ul>
+        </div>
     </div>
 </section>
 {% endblock content %}
